# web-search

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
src/websearch/: __init__.py  cli.py  engine.py
